--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
-    "ejs": "^3.1.9",
+    "ejs": "^2.6.1",
     "express": "^4.16.3",
-    "express-handlebars": "^7.1.2",
-    "mysql2": "^3.12.0",
-    "pug": "^3.0.2",
-    "sequelize": "^6.37.5"
+    "express-handlebars": "^3.0.0",
+    "mysql2": "^1.6.1",
+    "pug": "^2.0.3",
+    "sequelize": "^5.0.0-beta.11"
   }
 }
